--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.3",
     "next": "14.2.3",
+    "nextra": "^2.13.4",
+    "nextra-theme-docs": "^2.13.4",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
