--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^11.2.9",
     "next": "14.2.3",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
@@ -36,9 +38,12 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "recharts": "^2.12.7",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.3.0",
+    "three": "^0.164.1"
   },
   "devDependencies": {
+    "@types/node": "20.12.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
