--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@mantine/spotlight": "^7.10.0",
     "@mantine/tiptap": "^7.10.0",
     "@nextui-org/react": "^2.4.0",
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.6",
     "@tabler/icons-react": "^3.5.0",
     "@tiptap/extension-link": "^2.4.0",
     "@tiptap/react": "^2.4.0",
@@ -31,6 +33,7 @@
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.9",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
@@ -40,7 +43,8 @@
     "recharts": "^2.12.7",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "three-globe": "^2.31.0"
   },
   "devDependencies": {
     "@types/node": "20.12.13",
