--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/carousel": "^7.10.0",
     "@mantine/charts": "^7.10.0",
+    "@mantine/code-highlight": "^7.10.0",
     "@mantine/core": "^7.10.0",
     "@mantine/dates": "^7.10.0",
     "@mantine/dropzone": "^7.10.0",
